# meov

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  meov.code-workspace
assets/models/: all.fbx  tie.fbx  untitled.fbx
assets/settings/: settings.json
assets/shaders/: default.fs  default.vs  fragment_test.glsl  vertex_test.glsl
cmake/: ConanDependencies.cmake  ConfigFileMaker.cmake  GitUtils.cmake  ManageDependencies.cmake  conan_dependencies.cmake  conan_setup.cmake  options.cmake  tools.cmake
cmake/FindPackages/: FindImGui.cmake  Findimgui.cmake  Findimgui_filedialog.cmake  Findstb_image.cmake
dependencies/: CMakeLists.txt
src/: Common.hpp  common  common.hpp  main.cpp  precompiled.hpp
src/app_info/: app_info.cpp  app_info.cpp.in  app_info.hpp  app_info.hpp.in  definitions.hpp  definitions.hpp.in
src/appinfo/: AppInfo.cpp  AppInfo.cpp.in  AppInfo.hpp  Definitions.hpp  Definitions.hpp.in
src/core/: CMakeLists.txt  Core.cpp  Core.hpp  core.cpp  core.hpp
src/core/camera/: camera.cpp  camera.hpp
src/core/core_initializers/: core_initializers.cpp  core_initializers.hpp
src/core/event_manager/: event_manager.cpp  event_manager.hpp
src/core/factories/: ImplFactory.cpp  ImplFactory.hpp  impl_factory.cpp  impl_factory.hpp
src/core/factories/Implementations/: ImplFactory.cpp  ImplFactory.hpp
src/core/factories/Implementations/ogl/: OGLImplFactory.cpp  OGLImplFactory.hpp  ogl_impl_factory.hpp
src/core/factories/implementations/ogl/: ogl_impl_factory.cpp  ogl_impl_factory.hpp
src/core/framebuffer/: FrameBuffer.cpp  FrameBuffer.hpp  OGLFrameBuffer.cpp  OGLFrameBuffer.hpp  frame_buffer.cpp  frame_buffer.hpp
src/core/framebuffer/impl/ogl/: OGLFrameBuffer.cpp  OGLFrameBuffer.hpp  ogl_frame_buffer.cpp  ogl_frame_buffer.hpp
src/core/graphics/: Graphics.cpp  Graphics.hpp  graphics.cpp  graphics.hpp
src/core/graphics/impl/ogl/: OGLGraphics.cpp  OGLGraphics.hpp  ogl_graphics.cpp  ogl_graphics.hpp
src/core/initializer/: initializer.cpp  initializer_factory.cpp  initializer_factory.hpp
src/core/material/: material.cpp  material.hpp
src/core/mesh/: mesh.cpp  mesh.h  mesh.hpp  vertex.cpp  vertex.h  vertex.hpp
src/core/mixins/: Named.cpp  Named.h  Transformable.cpp  has_properties.hpp  named.cpp  named.hpp  selectable.cpp  selectable.hpp  transformable.cpp  transformable.hpp
src/core/model/: model.cpp  model.h  model.hpp
src/core/object/: object.cpp  object.hpp
src/core/object/components/: component.cpp  component.hpp  factory.cpp  factory.hpp  holder.cpp  holder.hpp
src/core/object/components/TransformComponent/: LightingComponent.cpp  ModelComponent.cpp  ModelComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
src/core/object/components/camera_component/: camera_component.cpp  camera_component.hpp
src/core/object/components/lighting_component/: lighting_component.cpp  lighting_component.hpp
src/core/object/components/model_component/: model_component.cpp  model_component.hpp
src/core/object/components/move_component/: move_component.cpp  move_component.hpp
src/core/object/components/shader_component/: shader_component.cpp  shader_component.hpp
src/core/object/components/skybox_component/: mesh.blyat  skybox_component.cpp  skybox_component.hpp
src/core/object/components/transform_component/: transform_component.cpp  transform_component.hpp
src/core/resources/image/: image.cpp  image.hpp
src/core/resources/loader/: loader.cpp  loader.hpp
src/core/resources/loader/impl/: assimp_loader.cpp  assimp_loader.hpp
src/core/resources/manager/: resource.cpp  resource.hpp  resource_manager.cpp  resource_manager.hpp
src/core/resources/texture/: texture.cpp  texture.hpp
src/core/scene/: scene.cpp  scene.hpp
src/core/shader/: shader.cpp  shader.h
src/core/shaders/: shaders.md
src/core/shaders/Shader/: Shader.cpp  Shader.hpp
src/core/shaders/Shader/impl/ogl/: OGLShader.cpp  OGLShader.hpp
src/core/shaders/Shader/impl/ogl/default_shaders/: fragment.glsl  vertex.glsl
src/core/shaders/ShadersProgram/: ShadersProgram.cpp  ShadersProgram.hpp
src/core/shaders/ShadersProgram/impl/ogl/: OGLShadersProgram.cpp  OGLShadersProgram.hpp
src/core/shaders/shader/: shader.cpp
src/core/shaders/shader/impl/ogl/: ogl_shader.cpp  ogl_shader.hpp
src/core/shaders/shaders_program/: shaders_program.cpp  shaders_program.hpp
src/core/shaders/shaders_program/impl/ogl/: ogl_shaders_program.cpp  ogl_shaders_program.hpp
src/core/texture/: texture.cpp  texture.h  texture.hpp
src/core/windows/base/: base_window.cpp  base_window.hpp
src/core/windows/gui_manager/: gui_manager.cpp  gui_manager.hpp
src/core/windows/log/: log_window.cpp  log_window.hpp
src/core/windows/properties/: properties_window.cpp  properties_window.hpp
src/core/windows/scene/: scene_tree.cpp  scene_tree.hpp  scene_window.cpp  scene_window.hpp
src/editor/: CMakeLists.txt  editor.cpp  editor.hpp
src/editor/serializer/: serializer.cpp  serializer.hpp
src/editor/windows/: windows.hpp
src/editor/windows/base/: base_window.cpp  base_window.hpp
src/editor/windows/gui_manager/: gui_manager.cpp  gui_manager.hpp
src/editor/windows/log/: log_window.cpp  log_window.hpp
src/editor/windows/properties/: properties_window.cpp  properties_window.hpp
src/editor/windows/scene/: scene_tree.cpp  scene_tree.hpp  scene_window.cpp  scene_window.hpp
src/modules/: CMakeLists.txt
src/modules/benchmark/: benchmark.cpp  benchmark.hpp
src/scene/: node.cpp  node.hpp
src/utilites/: LogUtils.cpp  LogUtils.hpp  Utilites.hpp
src/utilities/: LogUtils.cpp  LogUtils.hpp  Utilities.hpp  log_utils.cpp  log_utils.hpp
src/utils/: CMakeLists.txt  log_utils.cpp  log_utils.hpp  types.hpp  utils.hpp
src/utils/initializer/: initializer.cpp  initializer.hpp  initializer_factory.cpp  initializer_factory.hpp  initializer_listener.hpp
src/utils/log_storage/: log_storage.cpp  log_storage.hpp
src/utils/scope_wrapper/: scope_wrapper.hpp
src/utils/stb/: image.cpp  image.hpp
src/utils/time/: time_utils.cpp  time_utils.hpp
(+78 files in other folders)
